# jolt

./: README.md  next.config.ts  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: fetch-payloads.tsx
src/components/ui/: item.tsx  mode-toggle.tsx
