[package]
name = "jolt"
version = "0.4.3"
description = "The easy way to inject RCM Nintendo Switches."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whiz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0"
open = "5.3.3"

